mail-sender/src/main/java/com/example/mailsender/error/ErrorrResponse.java
package com.example.mailsender.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class ErrorrResponse {
    private String message;
}
